MSXPi v1.3 Release Notes
========================
This is mainly a PCB redesign.
- Changed the EEPROM footprint from DIP to PLCC
- Improved routing with power rails uninterrupted and wide.
- 5V power rail (for PI and EEPROM) routed on the edge of the card to avoid EMI 
- Bottom layer is now fully ground plane, with uninterrupted gnd plane across the PCB
- Rev1: Updated silk in back of pcb to reflect new jumper names

MSXPi v1.2 Release Notes
========================
- Added support in the software for the extension MSXPi for openMSX
- Added Pull-Up resistors to SPI_CS & SPI_RDY
- Added Push-button to Shutdown and Reboot Raspberry Pi (via interruption)
- Removed MSX RESET button from the interface
- Added diode in the 5V rail - allow Raspberry Pi to be powered
  via USB without leaking to the MSX
- Changed the 5V rail capacitor to 10uF
- Made optimisation to the CPLD firmware to save some logic gates
- Extensive changes to all software for stability
- Added new build file msxpibios.rom with MSXPi BIOS for BASIC CALL commands
- Lots of bug fixes to the code
  
MSXPi v1.1 Release Notes
========================
- New PCB layout
- New basic IO routines (used by all components)
- Lots of code changes to improve stability
- Improved pcopy: can decompress files, use virtual remote devices  
- Added BASIC API to support development in BASIC
- Added IRC.BAS - IRC client to chat in webchat.freenode.net
- Added BASIC programs from Retropix Brazil:
  - DOLAR.BAS
  - WEATHER.BAS
- Lots of bug fixes and improvements

MSXPi v1.0 Release Notes
========================
This release has some major changes to the hardware and softwar components.

On the hardware side:

- Replaced the EPROM 27C256 by AT28C256 EEPROM (Electronically erasable/rewritable)
- Implemented the /wait signal on the PCB (CPLD does not drives at this time, it is always tai-state)
- Schematics was updated to support the /wait signal
- CPLD logic update to drive /wait to tri-state (to avoid MSX to freeze)