@@ -1,0 +1,28 @@
+Server=python
+var PATH=/home/pi/msxpi
+var DriveA=/home/pi/msxpi/disks/msxpiboot.dsk
+var DriveB=/home/pi/msxpi/disks/tools.dsk
+var DriveM=ftp://192.168.1.100
+var DriveR1=https://www.msxarchive.nl/pub/msx/games/roms/msx1
+var DriveR2=http://www.msxarchive.nl/pub/msx/games/roms/msx2
+var WIDTH=80
+var WIFISSID=Your WiFi SSID
+var WIFIPWD=Your WiFi Password
+var WIFICOUNTRY=GB
+var DSKTMPL=/home/pi/msxpi/disks/blank.dsk
+var IRCNICK=msxpi
+var IRCADDR=chat.freenode.net
+var IRCPORT=6667
+var OPENAIKEY=Your OpenAI API Key
+var SPI_HW=False
+var SPI_CS=8
+var SPI_SCLK=11
+var SPI_MOSI=10
+var SPI_MISO=9
+var RPI_READY=25
+var free=free
+var free=free
+var free=free
+var free=free
+var free=free
+var free=free
