@@ -12,7 +12,7 @@
 97 goto 100
 99 bload "msxpiext.bin",r
 100 CLEAR500,49152!:REM BLOAD"msxpiext.bin",R
-110 SCREEN0,,80:KEY OFF:DEFINT A-Z:CLS
+110 SCREEN0,,80:WIDTH80:KEY OFF:DEFINT A-Z:CLS
 120 GOSUB 230
 130 GOTO 350
 140 '
